--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,5 +1,5 @@
 
-name: Deploy Docs
+name: Build and Deploy to gh-pages of another repository
 
 on:
   push:
@@ -9,9 +9,11 @@ on:
 
 permissions:
   contents: write
-
+     #修改上面的name和job相关的内容
 jobs:
   deploy-gh-pages:
+    build-and-deploy:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -46,5 +48,11 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # This is the branch where the docs are deployed to
-          branch: gh-pages
-          folder: src/.vuepress/dist
+          clean: true # 默认清除,可以不配置
+          branch: gh-pages # 默认分支,可不配置
+          repository-name: AndersonHJB/blog # 提交的目的仓库
+          ssh-key: ${{ secrets.BLOG_PRIVATE_KEY }} # 私钥配置在当前仓库中(settings/secrets and variables/actions/secrets),公钥配置在目的仓库中(settings/Deploy keys)
+          folder: src/.vuepress/dist # 需要提交的目录文件
+          clean-exclude: 
+          CNAME
+
