--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,5 +1,5 @@
 
-name: Build and Deploy to gh-pages of another repository
+name: Deploy Docs
 
 on:
   push:
@@ -50,4 +50,5 @@ jobs:
           # This is the branch where the docs are deployed to
           clean: true # 默认清除,可以不配置
           branch: gh-pages # 默认分支,可不配置
+          folder: src/.vuepress/dist
 
