--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,53 +1,41 @@
-
-name: Deploy Docs
-
-on:
-  push:
-    branches:
-      # make sure this is the branch you are using
-      - main
+# .github/workflows/deploy_to_blog.yml
+name: Build and Deploy to gh-pages of another repository
 
 permissions:
   contents: write
-     #修改上面的name和jobs相关的内容
+
+on:
+  # 每当 push 到 main 分支时触发部署
+  push:
+    branches: [main]
+
 jobs:
-  deploy-gh-pages:
+  build-and-deploy:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          # if your docs needs submodules, uncomment the following line
-          # submodules: true
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          run_install: true
-          version: 8
-
-
-      - name: Setup Node.js
+      - name: node switch
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: pnpm
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
+      - name: Install and Build
+        run: |
+          npm install
+          npm run docs:build
 
-      - name: Build Docs
-        env:
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          pnpm run docs:build
-          > src/.vuepress/dist/.nojekyll
-
-      - name: Deploy Docs
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # This is the branch where the docs are deployed to
           clean: true # 默认清除,可以不配置
           branch: gh-pages # 默认分支,可不配置
-          folder: src/.vuepress/dist
+          repository-name: Heijingmei/Heijingmei.github.io # 提交到公开仓库
+          ssh-key: ${{secrets.BLOG_PRIVATE_KEY}} # 私钥配置在当前仓库中(settings>>secrets and variables>>actions>>secrets),公钥配置在目的仓库中(settings>>Deploy keys)
+          folder: src/.vuepress/dist # 需要提交的目录文件
+          clean-exclude: |
+            CNAME
 
